# portfoilio

./: package-lock.json  package.json
live-wallpaper-android/: README.md  settings.gradle
live-wallpaper-android/app/: build.gradle
live-wallpaper-android/app/src/main/: AndroidManifest.xml
live-wallpaper-android/app/src/main/java/com/example/livewallpaper/: LiveWallpaperService.java  MainActivity.java
live-wallpaper-android/app/src/main/res/layout/: activity_main.xml
live-wallpaper-android/app/src/main/res/values/: strings.xml
live-wallpaper-android/app/src/main/res/xml/: wallpaper.xml
live-wallpaper-app/: index.html  main.js  package-lock.json  package.json  script.js  styles.css  wallpaper.html
live-wallpaper-cpp/: CMakeLists.txt  README.md
live-wallpaper-cpp/src/: main.cpp
personal-portfolio-website/: README.md
src/: routes.jsx
src/api/: cookies.js
src/components/: ChatInterface.jsx  LoadingSpinner.jsx  Navbar.jsx  SimpleLoader.jsx  UserModal.jsx
src/context/: AuthContext.jsx
src/pages/: Admins.jsx  Login.jsx  Reports.jsx  SupportTickets.jsx  UserID.jsx  Users.jsx
src/pages/Dashboard/: useDashboardData.js
src/pages/PostSection/: PostsFilters.jsx  PostsTable.jsx  index.jsx  usePostsData.js
src/pages/Transactions/: useTransactionsData.js
src/pages/Users/: UsersFilters.jsx  UsersTable.jsx  index.jsx  useUsersData.js
temp-dashboard/: index.html  script.js  styles.css
